# wukkOS

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  linker.ld  ppc32-custom.json  x86_64-custom.json
.cargo/: config  config.toml
arch/ppc32/: linker.ld
arch/x86_64/: boot.asm  grub.cfg  limine.cfg  linker.ld  longmodestart.asm  multiboot_header.asm
assembly/: .gitignore  boot.asm
byob/: .gitignore  README.md
initwukko/: magic.wukk
simple_boot/src/: main.rs
src/: font.rs  lib.rs  main.rs
src/allocator/: mod.rs
src/boot/: mod.rs
src/boot/multiboot2/: mod.rs
src/boot/x86_64/: mod.rs
src/internals/: cpu.rs  errors.rs  mod.rs
src/internals/cpu/: mod.rs
src/internals/cpu/ppc32/: mod.rs
src/internals/cpu/x86_64/: mod.rs
src/macros/: mod.rs
src/memory/: allocator.rs  mod.rs
src/memory/x86_64/: mod.rs
src/security/: mod.rs  stack_smashing_protection.rs
src/serial/: mod.rs  ps2controller.rs  simplifiers.rs  terminal.rs  terminal_helpers.rs
src/serial/ps2/: mod.rs
src/serial/x86_64/: mod.rs
