[package]
name = "wukkOS"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = "0.9.1"
pc-keyboard = "0.6.1"
cstr_core = { version = "0.2.6", features = ["alloc"] }
libfar = { git = "https://github.com/realmicrosoft/libfar_nostd" }
linked_list_allocator = { version = "0.9.0", optional = true }
rlibc = { version = "1.0" }
[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

# apic specific dependencies
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.10"
x2apic = "0.4.1"
acpi = { version = "4.1.1", optional = true }
limine = { version = "0.1.9", optional = true }

# powerpc (32) specific dependencies
[target.'cfg(target_arch = "powerpc")'.dependencies]
ieee1275 = { git = "https://github.com/rust-osdev/ieee1275-rs", features = ["no_panic_handler"] }

[features]
default = ["f_ll_alloc", "f_debug_verbose"]
f_debug_verbose = []
f_limine = ["dep:limine", "dep:acpi"]
f_ll_alloc = ["dep:linked_list_allocator"]

[profile.dev]
panic = "abort"
strip = true

[profile.release]
panic = "abort"
strip = true